--- a/week1/code/firstpage.html
+++ b/week1/code/firstpage.html
@@ -44,7 +44,7 @@
         <h1>Hola first page</h1>
 
         <h3>Short presentation</h3>
-        <p>Hi ! my name is eliot, I am a overseas student from France</p>
+        <p>Hi ! my name is Eliot, I am a overseas student from France</p>
         <p>I would like to be a dev en embedded environment like in space or the industry</p>
 
         <h3>This below is a list of my things:</h3>
