--- a/week2/code/task.html
+++ b/week2/code/task.html
@@ -6,9 +6,12 @@
 
     <body>
 
-        <hr>
-        <h1>TASK1</h1>
-        <hr>
+        <br>
+        <div style="background-color: darkslategray;">
+            <hr>
+            <h1>TASK1</h1>
+            <hr>
+        </div>
         <br>
         <br>
 
@@ -71,9 +74,11 @@
         </table>
 
         <br>
-        <hr>
-        <h1>TASK2</h1>
-        <hr>
+        <div style="background-color: darkslategray;">
+            <hr>
+            <h1>TASK2</h1>
+            <hr>
+        </div>
         <br>
         <br>
 
@@ -161,14 +166,15 @@
                 value="reset">Reset</button>
         </form>
 
-
-        
         <br>
-        <hr>
-        <h1>TASK3</h1>
-        <hr>
+        <div style="background-color: darkslategray;">
+            <hr>
+            <h1>TASK3</h1>
+            <hr>
+        </div>
         <br>
         <br>
-        <a download="debuggedHTML.html" href="debuggedCode.html">Get the debugged code here</a>
+        <a download="debuggedHTML.html" href="debuggedCode.html">Get the
+            debugged code here</a>
     </body>
 </html>
